# clima

./: .gitignore  README.md  TODO.md  mkdocs.yml  pyproject.toml  run_examples.bash  tox.ini
.github/workflows/: tests.yml
clima/: core.py  password_store.py
docs/: .readthedocs.yaml  index.md
examples/: traceback_example.py
tests/: test_configfile.py  test_integration.py
