[tool.poetry]
name = "clima"
version = "0.8.4"
description = "Command line interface (cli) boilerplate using a schema"
keywords = ["cli", "schema", "boilerplate", "cli-boilerplate", "cli-schema", "cli-tool", "cli-tools", "cli-interface", "cli-interfaces", "cli-application", "cli-applications"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: MacOS :: MacOS X", ]
homepage = "https://github.com/turuluu/clima.git"
authors = ["Joni Turunen <rojun.itu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.1"
setuptools = "70.0.0"
wheel = "*"
cryptography = "44.0.1"
bleach = "^6.2.0"
six = "*"
tabulate = "^0.9.0"
python-dotenv = "==0.15.0"

[tool.poetry.dev-dependencies]
pytest = "*"
# hypothesis = "*"
mock = "*"
requests = ">=2.25.0"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
